finised validation for users
